--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>SARERA DETAILING</title>
 	
+	<meta http-equiv="refresh" content="0;URL=https://www.instagram.com/sarera_detailing/"/>
+	
   </head>
   
 <body>
