--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>SARERA DETAILING</title>
-	
-	<meta http-equiv="refresh" content="0;URL=https://www.instagram.com/sarera_detailing/"/>
-	
-  </head>
-  
-<body>
-  
- 
-</body>
-</html>
+<iframe src="https://player.twitch.tv/?channel=tadzheek&parent=qumezka.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="100%" width="100%"></iframe>
