--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://player.twitch.tv/?channel=tadzheek&parent=qumezka.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="100%" width="100%"></iframe>
+<iframe src="https://player.twitch.tv/?channel=tadzheek&parent=sarera-dev.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="100%" width="100%"></iframe>
