--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://player.twitch.tv/?channel=tadzheek&parent=sarera-dev.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="100%" width="100%"></iframe>
+<iframe width="100%" height="100%" src="https://www.youtube.com/embed/TuZTUoiwujA?si=XkRToI1uDFns7QrH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
